# minagi-alarm

./: CHANGELOG.md  README.ja.md  README.md  README.zh.md  index.html  package-lock.json  package.json  vite.config.ts
scripts/: build-installer.ps1
src/: App.css  App.tsx  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/api/: tauri.ts
src/components/: AlarmEditor.tsx  AlarmItem.tsx  AlarmList.tsx  AlertDialog.tsx  BgPreview.tsx  ClockModeDisplay.tsx  ClockMusicList.tsx  CurrentTime.tsx  ErrorBoundary.tsx  RainEffect.tsx  SakuraEffect.tsx  SettingsPage.tsx  SnoozeIndicator.tsx  SoundPicker.tsx  StickyNote.tsx  TabBar.tsx  TimeWheel.tsx  Timer.tsx  TimerPresets.tsx  TimerRing.tsx
src/hooks/: useAlarms.ts  useAudio.ts  useTimer.ts  useWindowTitlebar.ts
src/i18n/: en.json  index.ts  ja.json  zh-CN.json  zh-TW.json
src/types/: index.ts
